# soggy

./: .gitattributes  .gitignore  CMakeLists.txt  dispatch.py  proxy.py  proxy_config.py  readme.md  readme_cn.md  soggy.cfg
proto/: AbilityActionBlink.proto  AbilityActionCreateGadget.proto  AbilityActionSetCrashDamage.proto  AbilityActionSummon.proto  AbilityActionTriggerAbility.proto  AbilityAppliedAbility.proto  AbilityAppliedModifier.proto  AbilityArgument.proto  AbilityAttachedModifier.proto  AbilityBornType.proto  AbilityFloatValue.proto  AbilityGadgetInfo.proto  AbilityIdentifier.proto  AbilityInvocationFailNotify.proto  AbilityInvocationFixedNotify.proto  AbilityInvocationsNotify.proto  AbilityInvokeArgument.proto  AbilityInvokeEntry.proto  AbilityInvokeEntryHead.proto  AbilityMetaAddAbility.proto  AbilityMetaAddOrGetAbilityAndTrigger.proto  AbilityMetaModifierChange.proto  AbilityMetaReInitOverrideMap.proto  AbilityMetaSetAbilityTrigger.proto  AbilityMetaSetKilledState.proto  AbilityMetaSetModifierApplyEntityId.proto  AbilityMetaSpecialFloatArgument.proto  AbilityMixinAvatarSteerByCamera.proto  AbilityMixinCostStamina.proto  AbilityMixinElementShield.proto  AbilityMixinEliteShield.proto  AbilityMixinEmpty.proto  AbilityMixinWindZone.proto  AbilityResetReason.proto  AbilityResetReasonType.proto  AbilityScalarType.proto  AbilityScalarValueEntry.proto  AbilityString.proto  AbilitySyncStateInfo.proto  AccountType.proto  (+463 more)
src/: binpack.hpp  configfile.cpp  configfile.hpp  dispatch.cpp  dispatch.hpp  game_data.cpp  game_data.hpp  game_enums.hpp  log.cpp  log.hpp  packet.cpp  packet.hpp  soggy.cpp  vec.hpp
static/: root.html
tool/: binpack.cpp  cmdids_processor.cpp
